--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       repo: 'https://simplezihao.github.io/#/',
       maxLevel: 5,//最大支持渲染的标题层级
       subMaxLevel: 3,
-      coverpage: false,//封面,_coverpage.md
+      coverpage: true,//封面,_coverpage.md
       homepage: 'README.md',
       auto2top: true,//切换页面后是否自动跳转到页面顶部
       search: {
