--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Good Luck</title>
+  <link rel="shortcut icon" href="Cancer.jpg" type="image/x-icon"/>
 </head>
 <style>
   body {
